--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "classnames": "^2.3.1",
     "dlv": "^1.1.3",
+    "framer-motion": "^6",
     "github-markdown-css": "^4.0.0",
     "moment": "^2.29.1",
     "next": "latest",
@@ -17,6 +22,7 @@
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-markdown": "^6.0.2",
     "react-moment": "^1.1.1",
     "react-multi-carousel": "^2.6.3",
