--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
+    "gcp-build": "strapi build",
     "strapi": "strapi",
     "seed": "node script/seed.js"
   },
@@ -22,6 +23,7 @@
     "lodash.set": "^4.3.2",
     "pg": "^8.7.3",
     "sqlite3": "5.0.2",
+    "strapi-provider-upload-google-cloud-storage": "^4.0.0",
     "unzip-stream": "^0.3.1",
     "uuid-v4": "^0.1.0"
   },
