--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "foodadvisor-v4",
+  "name": "intrinsic_backend",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Hackathon Project",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -28,13 +28,13 @@
     "uuid-v4": "^0.1.0"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "a hackathon participant"
   },
   "strapi": {
     "uuid": "FOODADVISOR-LOCAL-169f660b-fe9d-4b3a-8db7-bc17892f07b4"
   },
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=12.22.x <=16.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
