--- a/api/package.json
+++ b/api/package.json
@@ -16,13 +16,16 @@
     "@strapi/plugin-i18n": "4.1.1",
     "@strapi/plugin-seo": "^1.7.2",
     "@strapi/plugin-users-permissions": "4.1.1",
+    "@strapi/provider-email-mailgun": "^4.1.5",
     "@strapi/strapi": "4.1.1",
     "fs": "^0.0.1-security",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "lodash.set": "^4.3.2",
     "pg": "^8.7.3",
+    "pg-connection-string": "^2.5.0",
     "sqlite3": "5.0.2",
+    "strapi-plugin-passwordless": "^4.0.5",
     "strapi-provider-upload-google-cloud-storage": "^4.0.0",
     "unzip-stream": "^0.3.1",
     "uuid-v4": "^0.1.0"
