--- a/client/package.json
+++ b/client/package.json
@@ -1,34 +1,52 @@
 {
-  "name": "foodadvisor-client",
+  "name": "intrinsic-client",
   "version": "3.0.0",
   "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@ethersproject/providers": "^5.6.1",
+    "@metamask/detect-provider": "^1.2.0",
+    "@metamask/onboarding": "^1.0.1",
+    "@walletconnect/web3-provider": "^1.7.5",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "classnames": "^2.3.1",
     "dlv": "^1.1.3",
+    "ethers": "^5.6.1",
+    "formik": "^2.2.9",
     "framer-motion": "^6",
+    "fs": "^0.0.1-security",
     "github-markdown-css": "^4.0.0",
+    "mailgun-js": "^0.22.0",
     "moment": "^2.29.1",
     "next": "latest",
+    "next-images": "^1.8.4",
     "pluralize": "^8.0.0",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.1",
     "react-icons": "^4.3.1",
     "react-markdown": "^6.0.2",
     "react-moment": "^1.1.1",
     "react-multi-carousel": "^2.6.3",
     "react-query": "^3.16.0",
     "reactstrap": "^8.9.0",
-    "remark-gfm": "^1.0.0"
+    "remark-gfm": "^1.0.0",
+    "sharp": "^0.30.3",
+    "swr": "^1.2.2",
+    "uuid": "^8.3.2",
+    "web3": "^1.7.1",
+    "web3modal": "^1.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
